--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -7,6 +7,7 @@
 -->
 <div id="topbar-wrapper" class="row justify-content-center topbar-down">
   <div id="topbar" class="col-11 d-flex h-100 align-items-center justify-content-between">
+    {% comment %}
     <span id="breadcrumb">
       {% for item in page.breadcrumb %}
         {% if item.url %}
@@ -25,7 +26,7 @@
       {% endunless %}
 
     </span><!-- endof #breadcrumb -->
-
+    {% endcomment %}
     <i id="sidebar-trigger" class="fas fa-bars fa-fw"></i>
 
     <div id="topbar-title">
