--- a/assets/css/_colors/dark-typography.scss
+++ b/assets/css/_colors/dark-typography.scss
@@ -8,10 +8,10 @@
 
 @mixin dark-scheme {
   /* framework */
-  --main-wrapper-bg: /* #0B0D1C; */ rgb(27, 27, 30);
+  --main-wrapper-bg: #0B0D1C; /* rgb(27, 27, 30); */
   --body-bg: var(--main-wrapper-bg);
-  --topbar-wrapper-bg: rgb(39, 40, 43);
-  --search-wrapper-bg: rgb(34, 34, 39);
+  --topbar-wrapper-bg: #0B0D1C;/* rgb(39, 40, 43); */
+  --search-wrapper-bg: #22263C; /* rgb(34, 34, 39); */
   --search-icon-color: rgb(100, 102, 105);
   --input-focus-border-color: rgb(112, 114, 115);
   --mask-bg: rgb(68, 69, 70);
@@ -23,19 +23,19 @@
   --link-color: rgb(138, 180, 248);
   --link-underline-color: rgb(82, 108, 150);
   --main-border-color: rgb(44, 45, 45);
-  --button-bg: rgb(39, 40, 43);
+  --button-bg: #22263C;/* rgb(39, 40, 43); */
   --blockquote-border-color: rgb(66, 66, 66);
   --blockquote-text-color: rgb(117, 117, 117);
   --btn-border-color: rgb(63, 65, 68);
   --btn-backtotop-color: var(--text-color);
   --btn-backtotop-border-color: var(--btn-border-color);
   --btn-box-shadow: var(--main-wrapper-bg);
-  --card-header-bg: rgb(51, 50, 50);
+  --card-header-bg: #0B0D1C;/* rgb(51, 50, 50); */
   --label-color: rgb(108, 117, 125);
 
   /* Sidebar */
   --nav-cursor-color: rgb(183, 182, 182);
-  --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
+  --sidebar-bg: #23263C;/* #0B0D1C; *//* radial-gradient(circle, #242424 0%, #1d1f27 100%); */
 
   /* Top Bar */
   --topbar-text-color: var(--text-color);
@@ -52,7 +52,7 @@
 
   /* Posts */
   --toc-highlight: rgb(116, 178, 243);
-  --tag-bg: rgb(41, 40, 40);
+  --tag-bg: #22263C;/* rgb(41, 40, 40); */
   --tag-hover: rgb(43, 56, 62);
   --tb-odd-bg: rgba(42, 47, 53, 0.52); /* odd rows of the posts' table */
   --tb-even-bg: rgb(31, 31, 34); /* even rows of the posts' table */
@@ -61,7 +61,7 @@
   --btn-share-color: #6c757d;
   --btn-share-hover-color: #bfc1ca;
   --relate-post-date: var(--text-muted-color);
-  --card-bg: rgb(39, 40, 43);
+  --card-bg: #22263C;/* rgb(39, 40, 43); */
   --card-border-color: rgb(53, 53, 60);
   --card-box-shadow: var(--main-wrapper-bg);
 
