--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,33 +49,49 @@ layout: page
 {% for post in posts %}
 
   <div class="post-preview">
-    <img src="{{ post.image }}" loading="lazy" style="float: left; vertical-align: middle; border-radius: 15px; margin-right: 10px; width: 38%; background: #22263C; padding: 3px;" height="170">
-    <div class="d-flex justify-content-between pr-xl-2">
-      <h1><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h1>
-      {% if post.pin == true %}
-        <i class="fas fa-thumbtack fa-fw text-muted mt-1 ml-2 mt-xl-2" data-toggle="tooltip" data-placement="left"
-        title="Pinned"></i>
-      {% endif %}
-    </div>
-    <div class="post-content">
-      <p>
-        {% include no-linenos.html content=post.content %}
-        {{ content | markdownify | strip_html | truncate: 200 }}
-      </p>
-    </div>
-
-    <div class="post-meta text-muted">
-      <!-- posted date -->
-      <i class="far fa-clock fa-fw"></i>
-      {% include timeago.html date=post.date tooltip=true %}
-
-      <!-- page views -->
-      {% if site.google_analytics.pv.enabled %}
-      <i class="far fa-eye fa-fw"></i>
-      <span id="pv_{{-post.title-}}" class="pageviews">
-        <i class="fas fa-spinner fa-spin fa-fw"></i>
-      </span>
-      {% endif %}
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-4"">
+            <div class="post-img-cnt">
+              <a href="{{ post.url | relative_url }}">
+                <img src="{{ post.image }}" alt="{{post.title}} thumbnail" class="post-img">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="post-details">
+              <div class="d-flex justify-content-between pr-xl-2">
+                <h1><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h1>
+                {% if post.pin == true %}
+                <i class="fas fa-thumbtack fa-fw text-muted mt-1 ml-2 mt-xl-2" data-toggle="tooltip" data-placement="left"
+                title="Pinned"></i>
+                {% endif %}
+              </div>
+              <div class="post-content">
+                <p>
+                  {% include no-linenos.html content=post.content %}
+                  {{ content | markdownify | strip_html | truncate: 200 }}
+                </p>
+              </div>
+              
+              <div class="post-meta text-muted">
+                <!-- posted date -->
+                <i class="far fa-clock fa-fw"></i>
+                {% include timeago.html date=post.date tooltip=true %}
+                
+                <!-- page views -->
+                {% if site.google_analytics.pv.enabled %}
+                <i class="far fa-eye fa-fw"></i>
+                <span id="pv_{{-post.title-}}" class="pageviews">
+                  <i class="fas fa-spinner fa-spin fa-fw"></i>
+                </span>
+                {% endif %}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div> <!-- .post-review -->
 
