--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@ layout: page
     <div class="row">
       <div class="col-sm-12">
         <div class="row">
-          <div class="col-sm-4"">
+          <div class="col-sm-4">
             <div class="post-img-cnt">
               <a href="{{ post.url | relative_url }}">
                 <img src="{{ post.image }}" alt="{{post.title}} thumbnail" class="post-img">
