--- a/assets/css/_addon/module.scss
+++ b/assets/css/_addon/module.scss
@@ -39,7 +39,8 @@
 
 %heading {
   font-weight: 800;
-  font-family: 'Lato', 'Microsoft Yahei', sans-serif;
+  /* font-family: 'Lato', 'Microsoft Yahei', sans-serif; */
+  font-family: neue-haas-unica,sans-serif;
 }
 
 %section {
