--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -26,6 +26,9 @@
   @if $dark-mode {
     @include set-visible(inline-block, none);
     @include dark-scheme;
+    #topbar-wrapper  {
+      border-bottom: 3px solid #22263C;
+    }
   } @else {
     @include set-visible(none, inline-block);
     @include light-scheme;
@@ -277,6 +280,10 @@ $sidebar-display: "sidebar-display";
 
 /*--- top-bar ---*/
 
+// html[mode=light]>div#topbar-wrapper  {
+//   border-bottom: 3px solid #22263C;
+// }
+
 #topbar-wrapper {
   height: $topbar-height;
   position: fixed;
@@ -288,7 +295,6 @@ $sidebar-display: "sidebar-display";
   border-bottom: 1px solid rgba(0, 0, 0, 0.07);
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.05);
   background-color: var(--topbar-wrapper-bg);
-  border-bottom: 3px solid #22263C;
 }
 
 #topbar i { // icons
