--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -70,9 +70,8 @@
         https://github.com/{{ site.github.username }}
       {%- elsif entry.type == 'linkedin' -%}
         https://www.linkedin.com/in/{{ site.linkedin.username }}/?locale=en_US
-      {%- elsif entry.type == 'email' -%}
-        {% assign email = site.social.email | split: '@' %}
-        javascript:window.open('mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@'))
+      {%- elsif entry.type == 'twitter' -%}
+        https://twitter.com/{{ site.twitter.username }}
       {%- elsif entry.type == 'rss' -%}
         {{ "/feed.xml" | relative_url }}
       {%- else -%}
