--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -62,7 +62,8 @@ body {
   background: var(--body-bg);
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
-  font-family: 'Source Sans Pro', 'Microsoft Yahei', sans-serif;
+  // font-family: 'Source Sans Pro', 'Microsoft Yahei', sans-serif;
+  font-family: neue-haas-unica,sans-serif;
 }
 
 /*--- sidebar layout ---*/
